# AniZenithProject

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  anime pipeline.py  app.py  backend.py  backend_adapter.py  backendtemp.py  configurations.py  constants.py  create_db.py  db_setup  frontend_app.py  genrelist.txt  main.py  pyproject.toml  requirements.txt  retrieval_utils.py  test_detect_genre.py
.github/workflows/: aws_ecs_deploy.yml  hf-sync.yml  hf_sync.yml  run_model_tests.yml  run_tests.yml
archived/: app_health_check.sh  create_db.py  deploy_backend.sh  deploy_frontend.sh  nginx.conf
automation_scripts/: app_health_check.sh  deploy_backend.sh  deploy_containers.sh  deploy_frontend.sh  establish_ssh_connection.sh  red_team.sh
aws/: anizenith_task_definitions.json
backend/: AniZenithExchange.py  Dockerfile  app.py  auth.py  backend_utils.py  constants.py  inference_manager.py  models.py  mongodb_utils.py  prometheus_utils.py  prometheusbackend.py  requirements.txt  reranker.py  retrieval_utils.py  search.py  validation_utils.py
config/: config_utils.py
data/: anime.db  anime_scrape.py  create_db.py  populate_mongo_db.py  populate_mongo_db_scraped.py
docker/: backend.dockerfile  build.sh  compose.yml  frontend.dockerfile  prometheus.yml
frontend/: Dockerfile  app.py  frontend_app.py  requirements.txt
prometheus/: prometheus_middleware.py  prometheusclient.py
templates/: home.html  main.html
tests/: conftest.py  test_AniZenithMongoClient.py  test_backend_utils.py  test_chat_models.py  test_mongodb_utils.py  test_retrieval_utils.py
(+81 files in other folders)
