[project]
name = "cs553-casestudy1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio[oauth]>=6.5.1",
    "huggingface-hub>=1.3.5",
    "pytest>=9.0.2",
    "itsdangerous>=2.2.0",
    "torch>=2.10.0",
    "transformers>=5.0.0",
    "flask>=3.1.2",
    "fastapi[standard]>=0.128.0",
]
