[project]
name = "cs553-casestudy1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.3.5",
    "pytest>=9.0.2",
    "itsdangerous>=2.2.0",
    "torch>=2.10.0",
    "transformers>=5.0.0",
    "fastapi[standard]>=0.128.0",
    "prometheus-client>=0.24.1",
    "pandas>=3.0.2",
    "pymongo>=4.16.0",
    "sentence-transformers>=5.4.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
